# GloriusEvolutions

./: CMakeLists.txt  Log.md  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Camera.h  main.cpp
src/shaders/: fragment.glsl
